[package]
name = "rex"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.10.0"
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
serde = "1.0.130"
tokio = { version = "1.11.0", features = ["full"] }
clap = { version = "3.0.0-beta.4", features = ["yaml"] }
voca_rs = "1.14.0"
term-table = "1.3.2"
colored = "2.0.0"
viuer = "0.5.3"
image = "0.23.14"