[package]
name = "rex"
version = "0.1.0"
edition = "2018"
authors = ["Adrian Castro <adrifcastr@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.11.0"
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
serde = "1.0.130"
tokio = { version = "1.11.0", features = ["full"] }
clap = { version = "3.0.0-beta.4", features = ["yaml"] }
egui = "0.19.0"
egui_extras = { version = "0.19.0", features = ["svg", "image"] }
eframe = { version = "0.19.0", features = ["persistence"] }
voca_rs = "1.14.0"
term-table = "1.3.2"
colored = "2.0.0"
viuer = "0.5.3"
image = { version = "0.23", features = ["jpeg", "png"] }
imagenew = { package= "image", version = "0.24.4", features = ["jpeg", "png"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]